css/styles.css
:root {
    --tile: calc(((95vh)/6))
}

* {
    transition-duration: 250ms;
    font-family: 'Roboto', sans-serif;
    /* text-transform: lowercase; */
}

body {
    /* margin: 0 auto;     */
    /* justify-items: center; */
    /* text-align: center; */
    /* background: linear-gradient(to right ,black, rgb(85, 85, 85), white, rgb(85, 85, 85), black); */
    display: flex;
    justify-content: center;
    transform-origin: top;
    /* background: lightslategray; */
}

main {
    display: grid;
    -webkit-perspective: calc(3*(var(--tile)));
    perspective: calc(3*(var(--tile)));
    grid-template: repeat(6, var(--tile)) / repeat(3, var(--tile));
    /* gap: calc(0.03*(var(--tile))); */
    /* text-align: center; */
    /* padding: 0; */
    
    
}

#logo {
    display: flex;
    font-size: calc(0.24*(var(--tile)));
    text-transform: uppercase;
    justify-content: center;
    align-items: center;
    background-color: none;
    box-shadow: none;
    font-family: 'Spartan', sans-serif;
}

#logo-s {
    display: inline-block;
    font-size: calc(0.28*(var(--tile)));
    font-family: 'Spartan', sans-serif;
}

main .tiles {
    text-align: center;
    font-size: calc(.14*(var(--tile)));
    font-weight: bold;
    text-shadow: 0 0 .2em rgba(255, 255, 255, 0.75);
    padding: 1em;
    box-shadow: inset 1vh 0 1vh  rgba(255,255,255,.7),      /*left*/
                inset -1vh 0 1vh  rgba(0,0,0,.5),           /*right*/
                inset 0 1vh 1vh  rgba(255,255,255,.7),      /*top*/
                inset 0 -1vh 1vh  rgba(0,0,0,.5),           /*bottom*/
                /* ---------------deep----------------- */
                inset 3vh 0 3vh  rgba(255,255,255,.5),      /*left*/
                inset -3vh 0 3vh  rgba(0,0,0,.2),           /*right*/
                inset 0 3vh 3vh  rgba(255,255,255,.5),      /*top*/
                inset 0 -3vh 3vh  rgba(0,0,0,.2);           /*bottom*/
    border-radius: calc(0.05*(var(--tile)));
}

.tiles:hover {
    filter: brightness(110%) saturate(110%);
}

.tiles:active:not(#social-buttons-container) {
    transition-duration: 200ms;
    box-shadow: inset .5vh 0vh .7vh  rgba(0, 0, 0, .5),      /*left*/
                inset -1vh 0 .7vh   rgba(0, 0, 0, .7),           /*right*/
                inset 0 .5vh .7vh   rgba(0, 0, 0, .5),      /*top*/
                inset 0 -1vh .7vh  rgba(0,0,0,.7),           /*bottom*/

                inset 1vh 0 2vh  rgba(255,255,255,.7),      /*left*/
                inset -1vh 0 2vh  rgba(0,0,0, .5),           /*right*/
                inset 0 1vh 2vh  rgba(255,255,255, .7),      /*top*/
                inset 0 -1vh 2vh  rgba(0,0,0, .5),           /*bottom*/
                /* ---------------deep----------------- */
                inset 2vh 0 3vh  rgba(255,255,255,.5),      /*left*/
                inset -2vh 0 3vh  rgba(0,0,0,.4),           /*right*/
                inset 0 2vh 3vh  rgba(255,255,255,.5),      /*top*/
                inset 0 -2vh 3vh  rgba(0,0,0,.4);         /*bottom*/
    filter: brightness(105%) saturate(100%);

 
                
                
}

button {
    border: none;
}

#logo {
    grid-area: 2 / 1 / 3 / 3;
}

#nav-button {
    grid-area: 6 / 3 / 7 / 4;
    font-size: calc(0.5*(var(--tile)));
    color: grey;
}

#social-buttons-container {
    display: flex;
    flex-direction: column;
    justify-content: space-evenly;
}

.social-buttons {
    /* max-width: 100%; */
    align-self: center;
    background: none;
    padding: .2em;
    font-size: xx-large;
    color: black;
    text-decoration: none;
    border-radius: 1em;


}

.social-buttons:active {
    transition-duration: .1s;
    box-shadow: inset .1em 0 .1em rgba(0,0,0,.2),
    inset -.1em 0 .1em rgba(0,0,0,.2),
    inset 0 .1em .1em rgba(0,0,0,.2),
    inset 0 -.1em .1em rgba(0,0,0,.2);
}

#linkedin-icon {
    color: #0c66c2;
}

.show-nav-elements {
    transform: rotateX(0deg)
}

.hide-nav-elements {
    transform: rotateX(-135deg)
}

#proj-1 {
    grid-area: 1 / 1 / 2 / 2;
    /* background-image: url("https://res.cloudinary.com/scwd/image/upload/ar_1:1,c_fill,e_art:hokusai,g_auto,h_500,w_500/v1626185960/Portfolio%20Placeholders/al-aqsa-1233827_v1epx1.jpg"); */
    /* background-size: cover; */
    /* background: teal; */
    
}

#proj-2 {
    grid-area: 2 / 3 / 3 / 4;
    background: purple;
}

#proj-3 {
    grid-area: 3 / 2 / 4 / 3;
    background: magenta;
}

#proj-4 {
    grid-area: 4 / 1 / 5 / 2;
    background: yellowgreen;    
}

#proj-5 {
    grid-area: 4 / 2 / 5 / 3;
    background: cadetblue;
}

#proj-6 {
    grid-area: 4 / 3 / 5 / 4;
    background: goldenrod;
}

#proj-7 {
    grid-area: 5 / 1 / 6 / 2;
    background: lightsalmon;
    
}

.display-none {
    display: none !important;
}

.nav-elements {
    margin: 0;
    padding: 0;
    transform-origin: center;
    -webkit-backface-visibility: hidden;
    backface-visibility: hidden;    
}

.nav-elements#about-me-button {
    grid-area: 6 / 2 / 7 / 3;

}

.nav-elements#contact-form-button {
    grid-area: 5 / 3 / 6 / 4;
}

.nav-elements#social-buttons-container {
    grid-area: 5 / 2 / 6 / 3;
}

.project-cards {
    grid-area: 1 / 1 / 6 / 4;
}

#about-me-div {
    
    grid-area: 4 / 1 / 7 / 4;
    display: grid;
    grid-template: 33.33% 2fr / 33.33% 1fr 1fr
    /* transform: translateY(1000px); */
}

#about-me-header {
    grid-area: 1 / 2 / 2 / 3;
    text-align: center;
    align-self: end;
    padding: 0;
    margin: 0;
}

#about-me-article {
    grid-area: 1 / 1 / 3 / 4;
}

#about-me-article p {
    margin-top: calc(var(--tile));
    padding: .8em
}

#portrait {
    /* transform: translateY(calc(-1*(var(--tile)))); */
    height: calc(0.9*(var(--tile)));
    border-radius: calc(var(--tile));
    padding: calc(0.05*(var(--tile)));;
    float: right;
}

/* #about-me-article {
    grid-area: 5 / 1 / 7 / 4;
    transform: translateY(1000px);
} */

#contact-form {
    grid-area: 5 / 1 / 7 / 4;
    align-self: stretch;
    /* text-align: center; */
}

#fs-frm {
    height: 100%;
}

fieldset#fs-frm-inputs {
    box-sizing: border-box;
    height: 100%;
    display: flex;
    flex-direction: column;
    justify-content: stretch;
    font-size: calc(.15*(var(--tile)));
    padding: .8em;
    border: none;
    
}

#full-name, #email-address, #message, #contact-form-submit-button {
    /* flex-grow: 1; */
    box-sizing: border-box;
    display: inline-block;
    height: 2em;
    margin: .1em;
    padding: .5em;
    /* display: inline-block; */
    /* margin: 0 auto; */
    /* width: 100%; */
}

#message {
    flex-grow: 2;
}

#contact-form-submit-button {
    padding: 0;
}

/* -------------------------------------------- */
        /* About Me Moves */
/* -------------------------------------------- */

.translate-nav-about {
    transform: translateY(calc(-3*(var(--tile))));    
}

.translate-proj-1-about {
    transform: translateY(0);
}

.translate-proj-2-about {
    transform: translateY(calc(-1*(var(--tile))));
}

.translate-proj-3-about {
    transform: translateY(calc(-2*(var(--tile))));    
}

.translate-proj-4-about {
    transform: translateY(calc(-1*(var(--tile))));
}

.translate-proj-5-about {
    transform: translateY(calc(-1*(var(--tile))));
}

.translate-proj-6-about {
    transform: translateY(calc(-2*(var(--tile))));    
}

.translate-proj-7-about {
    transform: translateY(calc(-1*(var(--tile))));
}

.translate-proj-1-cards, .translate-proj-2-cards, .translate-proj-3-cards, .translate-proj-4-cards, .translate-proj-5-cards, .translate-proj-6-cards, .translate-proj-7-cards {
    /* display: none; */
    opacity: 0;
    z-index: 0;
}

.translate-logo-cards {
    transform: translateY(calc(4*(var(--tile))));
}

/* -------------------------------------------- */
        /* Contact Form Moves */
/* -------------------------------------------- */

.translate-nav-contact {
    transform: translateY(calc(-2*(var(--tile))));    
}

.translate-proj-1-contact {
    transform: translateY(0);
}

.translate-proj-2-contact {
    transform: translateY(0);
}

.translate-proj-3-contact {
    transform: translateY(0);    
}

.translate-proj-4-contact {
    transform: translateY(calc(-1*(var(--tile))));
}

.translate-proj-5-contact {
    transform: translateY(0);
}

.translate-proj-6-contact {
    transform: translateY(calc(-1*(var(--tile))));    
}

.translate-proj-7-contact {
    transform: translateY(calc(-1*(var(--tile))));
}

article.project-cards {
    /* transform: translateZ(-200px); */
    display: flex;
    flex-direction: column;
    justify-content: space-between;
    align-items: stretch;
    border-radius: calc(0.1*(var(--tile)));
    box-shadow: inset 20px 50px 100px 0 black,
                inset -20px -50px 100px 0 black;
    text-shadow: 0 0 5px rgba(255,255,255,.5);
    padding: calc(0.25*(var(--tile)));
}   

article.project-cards h3, article.project-cards p {
    background: #efefef25;
    margin: 0;
    padding: 0;
}

article.project-cards h3 {
    border-radius: 2vh 2vh 0 0;
    font-size: calc(0.2*(var(--tile)));
    text-align: center;
}

article.project-cards p {
    border-radius: 0 0 2vh 2vh;
    font-size: calc(0.12*(var(--tile)));
    flex-grow: 2;
    padding: 1em 3em;
}

article.project-cards a {
    font-size: calc(0.15*(var(--tile)));
    max-width: fit-content;
    padding: calc(0.075*(var(--tile)));
    margin: calc(0.075*(var(--tile))) auto;
    background: #efefef;
    border-radius: calc(0.05*(var(--tile)));
    color: black;
    text-decoration: none;


}

